udpate of documentation of supported options